--- a/src/app/pages/fournisseur/fournisseur.component.scss
+++ b/src/app/pages/fournisseur/fournisseur.component.scss
@@ -3,3 +3,20 @@
   font-size: 16px;
   width: 100%;
 }
+
+fieldset {
+  border: 2px solid #000000;
+  border-radius: 5px;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+legend {
+  background-color: #4594e9;
+  font-weight: bold;
+  color: #ffffff;
+  padding: 10px 25px; /* Agrandir le fond en ajoutant du padding */
+    border-radius: 5px; /* Arrondir les coins */
+    display: inline-block; /* Pour ajuster le fond autour du texte */
+    text-align: center;
+}
