--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -269,7 +269,8 @@
           <td>{{ detail?.product?.category?.name }}</td>
           <td>{{ detail?.product?.conditioning?.name }}</td>
           <td>{{ detail?.quantity }} ({{ detail?.unit?.code }})</td>
-          <td>{{ detail?.value }}/{{ detail?.unit?.code }}</td>
+          <td>{{ detail?.value | number:'1.2-2' }}
+            /{{ detail?.unit?.code }}</td>
           <td>{{ detail?.totalPrice }}</td>
           <td>
             <button
